style.css
body {
	max-width: 600px;
	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
	color: #333;
	margin: 1em;
	line-height: 1.35;
	letter-spacing: .01em;
	background-color: #EEE;
}

#resumeShortcut {
	float: right;
	margin: 2rem;
	font-size: .75em;
}

h1 {
	font-weight: 100;
	font-size: 3em;
}

h1, strong {
	color: #444;
}

a, a:visited, #email {
	/*	color: rgba(40,177,40,1);*/
	/*	border-bottom: 1px dotted rgba(40,177,40,.5) ;*/

	color: inherit;
	border-bottom: 1px dotted #00000080;

	text-decoration: none ;
}

a:hover, #email:hover {
	border-bottom: 1px solid;
}

.subtext {
	font-size: .85em;
	opacity: .85;
	font-style: italic;
}

hr {
	opacity: .25;
	margin: 4em 0;
}

/* Dark mode */
@media (prefers-color-scheme: dark) {
	body {
		background-color: #111;
		color: #D6D6D6;
	}

	h1, strong {
		color: #DDD;
	}

	a, a:visited, #email {
		border-bottom: 1px dotted #FFFFFF80;
	}
}

